--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   slider: ^0.0.1
+  blur_container: ^0.0.2
 
 
 dev_dependencies:
